k8s/traefik/netdata.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netdata
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netdata.example.com`)
      kind: Rule
      middlewares:
        - name: oauth2-proxy
          namespace: default
        - name: secure-headers
          namespace: default
        - name: ratelimit-default
          namespace: default
      services:
        - name: netdata
          port: 80
